# greenkode

./: CONTRIBUTING.md  LICENSE  README.md  emissions.csv  emissions.csv.bak  greenkode.bat  pyproject.toml  test_app.py  verify_phase1.py
.github/workflows/: test.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DOCUMENTATION_EN.md  DOCUMENTATION_ID.md  GETTING_STARTED.md  OPEN_SOURCE_ROADMAP.md  ebook_plan.md  greenkode_ebook.html  proposal.tex  research_plan.md
examples/: inefficient_code.py
src/greenkode/: __init__.py  analyzer.py  cli.py  engine.py  interface.py  reporter.py
src/greenkode/data/: rules.json
tests/: test_analyzer_phase1.py
tests/scenarios/: dirty_code.py  green_code.py
