[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "greenkode"
version = "0.1.0"
description = "A professional Python SDK that measures the carbon footprint of code and suggests optimizations."
authors = ["Ardellio Satria Anindito <info@greenkode.ai>"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.8"
codecarbon = "^2.2.0"
rich = "^13.0.0"
colorama = "^0.4.6"
typer = "^0.9.0"

[tool.poetry.scripts]
greenkode = "greenkode.cli:app"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
